fixed the elements from not aligning properly

--- a/img2asci/styles.css
+++ b/img2asci/styles.css
@@ -1,3 +1,3 @@
 pre {
-    -webkit-text-fill-color: black;
+    -webkit-text-fill-color: red;
 }
